--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <link rel="stylesheet" href="./music/wave.css" />
     <link rel="stylesheet" href="./music/progress.css" />
 
+    <link rel="stylesheet" href="./resources/wallpaper.css" />
+
     <!-- 引入Font Awesome图标库 -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 
@@ -120,7 +122,11 @@
 
     <!-- 在body结束标签前引入JavaScript -->
     <script src="./music/music.js"></script>
+    <script src="./music/playlist.js"></script>
     <script src="./music/progress.js"></script>
+    <script src="./music/mode.js"></script>
+
+    <script src="./resources/wallpaper.js"></script>
 
   </body>
 </html>
