--- a/index.html
+++ b/index.html
@@ -76,12 +76,10 @@
             
             <!-- 单独的标签容器 -->
             <div class="tags-container">
-              <div class="tag">Web开发</div>
-              <div class="tag">前端工程师</div>
-              <div class="tag">JavaScript</div>
-              <div class="tag">CSS</div>
-              <div class="tag">React</div>
-              <div class="tag">Vue</div>
+              <div class="tag">Linux</div>
+              <div class="tag">Docker</div>
+              <div class="tag">Nginx</div>
+              <div class="tag">NE</div>
             </div>
           </div>
         </div>
