--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>index</title>
+    <title>One Potato</title>
 
     <link rel="stylesheet" href="./normalize.min.css" />
     <link rel="stylesheet" href="./css/body.css" />
