--- a/wiki/site/404.html
+++ b/wiki/site/404.html
@@ -8,7 +8,7 @@
         
         
         <link rel="shortcut icon" href="/wiki/img/favicon.ico">
-        <title>Potato的文档</title>
+        <title>One Potato WIKI</title>
         <link href="/wiki/css/bootstrap.min.css" rel="stylesheet">
         <link href="/wiki/css/fontawesome.min.css" rel="stylesheet">
         <link href="/wiki/css/brands.min.css" rel="stylesheet">
@@ -24,7 +24,7 @@
     <body>
         <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
-                <a class="navbar-brand" href="/wiki/.">Potato的文档</a>
+                <a class="navbar-brand" href="/wiki/.">One Potato WIKI</a>
 
                 <!-- Expanded navigation -->
                 <div id="navbar-collapse" class="navbar-collapse collapse">
