--- a/wiki/site/index.html
+++ b/wiki/site/index.html
@@ -8,7 +8,7 @@
         
         <link rel="canonical" href="https://potatoone.github.io/wiki/">
         <link rel="shortcut icon" href="img/favicon.ico">
-        <title>Potato的文档</title>
+        <title>One Potato WIKI</title>
         <link href="css/bootstrap.min.css" rel="stylesheet">
         <link href="css/fontawesome.min.css" rel="stylesheet">
         <link href="css/brands.min.css" rel="stylesheet">
@@ -24,7 +24,7 @@
     <body class="homepage">
         <div class="navbar fixed-top navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
-                <a class="navbar-brand" href=".">Potato的文档</a>
+                <a class="navbar-brand" href=".">One Potato WIKI</a>
 
                 <!-- Expanded navigation -->
                 <div id="navbar-collapse" class="navbar-collapse collapse">
@@ -166,5 +166,5 @@ docs/
 
 <!--
 MkDocs version : 1.6.1
-Build Date UTC : 2025-03-21 08:49:43.665265+00:00
+Build Date UTC : 2025-03-21 09:19:41.503744+00:00
 -->
