--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 
     <title>One Potato</title>
 
+    <!-- 网站图标 -->
+    <link rel="icon" href="./res/home.png" type="image/png">
+
     <link rel="stylesheet" href="./normalize.min.css" />
     <link rel="stylesheet" href="./body.css" />
     <link rel="stylesheet" href="./click/loader.css" />
@@ -46,7 +49,12 @@
 
         <div class="content">
           <div class="content-container">
-            <div class="content-tab1"></div>
+            <div class="content-tab1">
+              <a href="https://potatoone.github.io/wiki/site" class="wiki-link" title="访问我的Wiki">
+                <i class="fas fa-book-open"></i>
+                <span>My Wiki</span>
+              </a>
+            </div>
             <div class="content-tab2"></div>
             <div class="content-tab3"></div>
             <div class="content-tab4"></div>
