--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
 
         </div>
 
+
+        <!-- 音乐播放器区域 -->
         <div class="player">
 
           <div id="playlist" class="playlist">
@@ -178,6 +180,7 @@
 
       </div>
 
+
       <!-- 个人信息弹窗 -->
       <div class="modal-overlay" id="contact-modal">
         <div class="box">
@@ -189,10 +192,9 @@
         </div>
       </div>
 
-
     </div>
 
-    <!-- 在body结束标签前引入JavaScript -->
+
 
     <script src="./layout-top/sentence.js"></script> <!-- 一言 -->
     <script src="./layout-top/weather.js"></script>  <!-- 天气 -->
