--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>One Potato</title>
 
     <!-- 网站图标 -->
-    <link rel="icon" href="./res/home.svg" type="image/svg">
+    <link rel="icon" href="./res/home.png" type="image/png">
 
     <link rel="stylesheet" href="./normalize.min.css" />
     <link rel="stylesheet" href="./body.css" />
