stable v1.0 加入桌面窗口管理器

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <!-- 网站图标 -->
     <link rel="icon" href="./res/home.png" type="image/png">
+    
+    <link rel="stylesheet" href="./windows/window.css" media="(min-width: 768px)">
 
     <link rel="stylesheet" href="./normalize.min.css" />
     <link rel="stylesheet" href="./body.css" />
@@ -194,7 +196,11 @@
 
     </div>
 
+    <script>
 
+    </script>
+
+    <script src="./body.js"></script> <!-- 主体 -->
 
     <script src="./layout-top/sentence.js"></script> <!-- 一言 -->
     <script src="./layout-top/weather.js"></script>  <!-- 天气 -->
@@ -213,6 +219,7 @@
 
     <script src="./res/wallpaper.js"></script>  <!-- Bing壁纸 -->
     <script src="./click/loader.js"></script> <!-- 点击效果 -->
+
     
   </body>
 </html>
