--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           
           <div class="content-container">
             <div class="content-tab1">
-              <a href="https://potatoone.github.io/wiki/site" class="tab-link" title="我的Wiki">
+              <a href="https://potatoone.github.io/wiki/" class="tab-link" title="我的Wiki">
                 <i class="fas fa-book-open"></i>
                 <span>Wiki</span>
               </a>
