--- a/wiki/404.html
+++ b/wiki/404.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script>window.__VP_HASH_MAP__=JSON.parse("{\"examples_api-examples.md\":\"DC4LLokF\",\"examples_markdown-examples.md\":\"Sfr2fDyY\",\"index.md\":\"7dckZkfX\"}");window.__VP_SITE_DATA__=JSON.parse("{\"lang\":\"en-US\",\"dir\":\"ltr\",\"title\":\"One Potato Wiki\",\"description\":\"One Potato's Personal Knowledge base\",\"base\":\"/wiki/\",\"head\":[],\"router\":{\"prefetchLinks\":true},\"appearance\":true,\"themeConfig\":{\"nav\":[{\"text\":\"主页\",\"link\":\"/\"},{\"text\":\"示例\",\"link\":\"/markdown-examples\"}],\"sidebar\":[{\"text\":\"示例\",\"items\":[{\"text\":\"Markdown 示例\",\"link\":\"/examples/markdown-examples\"},{\"text\":\"运行时 API 示例\",\"link\":\"/examples/api-examples\"}]}],\"socialLinks\":[{\"icon\":\"github\",\"link\":\"https://github.com/potatoone\"}]},\"locales\":{},\"scrollOffset\":134,\"cleanUrls\":false}");</script>
+    <script>window.__VP_HASH_MAP__=JSON.parse("{\"examples_api-examples.md\":\"DC4LLokF\",\"examples_markdown-examples.md\":\"Sfr2fDyY\",\"index.md\":\"7dckZkfX\"}");window.__VP_SITE_DATA__=JSON.parse("{\"lang\":\"en-US\",\"dir\":\"ltr\",\"title\":\"One Potato Wiki\",\"description\":\"One Potato's Personal Knowledge base\",\"base\":\"/wiki/\",\"head\":[],\"router\":{\"prefetchLinks\":true},\"appearance\":true,\"themeConfig\":{\"nav\":[{\"text\":\"主页\",\"link\":\"/\"},{\"text\":\"示例\",\"link\":\"/examples/markdown-examples\"}],\"sidebar\":[{\"text\":\"示例\",\"items\":[{\"text\":\"Markdown 示例\",\"link\":\"/examples/markdown-examples\"},{\"text\":\"运行时 API 示例\",\"link\":\"/examples/api-examples\"}]}],\"socialLinks\":[{\"icon\":\"github\",\"link\":\"https://github.com/potatoone\"}]},\"locales\":{},\"scrollOffset\":134,\"cleanUrls\":false}");</script>
     
   </body>
 </html>
