--- a/index.html
+++ b/index.html
@@ -137,8 +137,10 @@
               <div class="tag">Linux</div>
               <div class="tag">Docker</div>
               <div class="tag">Nginx</div>
+              <div class="tag">Network</div>
+              <div class="tag">Android</div>
               <div class="tag">Go</div>
-              <div class="tag">Net</div>
+
               <div class="tag">UI/UX</div>
             </div>
 
@@ -196,7 +198,7 @@
     </div>
 
 
-    <script src="./res/wallpaper.js"></script>  <!-- Bing壁纸 -->
+    <script src="./res/wallpaper.js"></script>   <!-- Bing壁纸 -->
     <script src="./res/click/loader.js"></script> <!-- 点击效果 -->
     <script src="./body/body.js"></script> <!-- 主体 -->
 
@@ -214,6 +216,19 @@
     <script src="./layout-bottom/music/progress/progress.js"></script> <!-- 进度条 -->
     <script src="./layout-bottom/music/mode.js"></script> <!-- 播放模式 -->
     <script src="./layout-bottom/music/mobile.js"></script> <!-- 移动端适配 -->
+
+    <!-- THREE.js库 -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
+    <!-- 后期处理效果库 -->
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/EffectComposer.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/RenderPass.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/ShaderPass.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/shaders/CopyShader.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/UnrealBloomPass.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/shaders/LuminosityHighPassShader.js"></script>
+
+    <!-- 最后添加烟花效果 -->
+    <script src="./res/fireworks.js"></script>
 
   </body>
 </html>
