--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
               </a>
             </div>
             <div class="content-tab2">
-              <a href="#" class="tab-link" title="网址导航">
+              <a href="http://nav.rise365.cn/" class="tab-link" class="tab-link" title="网址导航">
                 <i class="fas fa-compass"></i>
-                <span>网址导航</span>
+                <span>导航</span>
               </a>
             </div>
             <div class="content-tab3">
@@ -73,9 +73,9 @@
               </a>
             </div>
             <div class="content-tab4">
-              <a href="#" class="tab-link" title="图册">
+              <a href="https://huaban.com/#" class="tab-link" title="花瓣">
                 <i class="fas fa-images"></i>
-                <span>图册</span>
+                <span>花瓣</span>
               </a>
             </div>
           </div>
@@ -84,7 +84,6 @@
             <div class="tab1">
               <a href="https://github.com/potatoone/" class="tab-link" title="Github">
                 <i class="fab fa-github"></i>
-                <span>Github</span>
               </a>
             </div>
             <div class="tab2">
