--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="./res/icon/home.png" type="image/png">    <!-- 网站图标 -->
     <link rel="stylesheet" href="./body/loading/loading.css" />    <!-- ...loading... -->
     <link rel="stylesheet" href="./body/click/loader.css" />    <!-- 点击效果 -->
+    <link rel="stylesheet" href="./res/fireworks/fireworks.css" />  <!-- Bing壁纸 -->
 
     <link rel="stylesheet" href="./layout-content/snake/snake.css"/>  <!-- 贪吃蛇游戏样式 -->
 
@@ -245,17 +246,8 @@
     <script src="./layout-bottom/music/mode.js"></script>  <!-- 播放模式 -->
     <script src="./layout-bottom/music/mobile.js"></script>  <!-- 移动端适配 -->
 
-    <!-- THREE.js库 -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
-    <!-- 后期处理效果库 -->
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/EffectComposer.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/RenderPass.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/ShaderPass.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/shaders/CopyShader.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/postprocessing/UnrealBloomPass.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/three@0.128.0/examples/js/shaders/LuminosityHighPassShader.js"></script>
     <!-- 烟花效果 -->
-    <script src="./res/fireworks.js"></script>
+    <script src="./res/fireworks/fireworks.js"></script>
 
   </body>
 
