--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
               </a>
             </div>
             <div class="content-tab2">
-              <a href="http://nav.rise365.cn/" class="tab-link" class="tab-link" title="网址导航">
+              <a href="https://potatoone.github.io/nav/" class="tab-link" class="tab-link" title="网址导航">
                 <i class="fas fa-compass"></i>
                 <span>导航</span>
               </a>
