更新导航栏

--- a/nav/index.html
+++ b/nav/index.html
@@ -69,18 +69,18 @@
   <!-- 悬浮底部导航栏 -->
   <div class="nav">
     <div class="nav-item" data-nav="1">
-      <i class="fa fa-calendar icon"></i> <!-- 日常：日历图标 -->
-      <span>日常</span>
+      <i class="fa fa-coffee icon"></i>
+      <span>Daily</span>
     </div>
     
     <div class="nav-item" data-nav="2">
-      <i class="fa fa-coffee icon"></i> <!-- 生活：咖啡杯图标 -->
-      <span>生活</span>
+      <i class="fa fa-screwdriver-wrench icon"></i>
+      <span>Tools</span>
     </div>
     
     <div class="nav-item" data-nav="3">
-      <i class="fa fa-code icon"></i> <!-- 编程：代码图标 -->
-      <span>编程</span>
+      <i class="fa fa-code icon"></i>
+      <span>Dev</span>
     </div>
   </div>
 
