--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="./body/click/loader.css" />    <!-- 点击效果 -->
     <link rel="stylesheet" href="./res/fireworks/fireworks.css" />  <!-- Bing壁纸 -->
 
+
+<link rel="stylesheet" href="./res/windows/window.css" />
+
     <link rel="stylesheet" href="./layout-content/snake/snake.css"/>  <!-- 贪吃蛇游戏样式 -->
 
     <link rel="stylesheet" href="./body/normalize.min.css" /> <!-- 重置样式 -->
@@ -248,6 +251,11 @@
 
     <!-- 烟花效果 -->
     <script src="./res/fireworks/fireworks.js"></script>
+    <script src="./res/fireworks/check.js"></script>
+
+    <!-- 窗口管理器 -->
+    <script src="./res/windows/window.js" defer></script>
+
 
   </body>
 
