--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>One Potato</title>   <!-- 网站标题 -->
+    <title>One Potato HomePage</title>   <!-- 网站标题 -->
 
     <link rel="icon" href="./res/icon/home.png" type="image/png">    <!-- 网站图标 -->
     <link rel="stylesheet" href="./body/loading/loading.css" />    <!-- ...loading... -->
@@ -17,7 +17,6 @@
 
     <link rel="stylesheet" href="./layout-content/snake/snake.css"/>  <!-- 贪吃蛇游戏样式 -->
 
-    <link rel="stylesheet" href="./body/normalize.min.css" /> <!-- 重置样式 -->
     <link rel="stylesheet" href="./body/body.css" />  <!-- 主体 -->
 
     <link rel="stylesheet" href="./layout-top/sentence.css" />  <!-- 一言 -->
