--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>One Potato HomePage</title>   <!-- 网站标题 -->
 
-    <link rel="icon" href="./res/icon/home.png" type="image/png">    <!-- 网站图标 -->
+    <link rel="icon" href="./res/icon/logo.svg" type="image/png">    <!-- 网站图标 -->
     <link rel="stylesheet" href="./body/loading/loading.css" />    <!-- ...loading... -->
     <link rel="stylesheet" href="./body/click/loader.css" />    <!-- 点击效果 -->
     <link rel="stylesheet" href="./res/fireworks/fireworks.css" />  <!-- Bing壁纸 -->
