--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>One Potato HomePage</title>   <!-- 网站标题 -->
+    <title>One Potato Homepage</title>   <!-- 网站标题 -->
 
     <link rel="icon" href="./res/icon/logo.svg" type="image/png">    <!-- 网站图标 -->
     <link rel="stylesheet" href="./body/loading/loading.css" />    <!-- ...loading... -->
