--- a/index.html
+++ b/index.html
@@ -52,8 +52,10 @@
       <div class="loading"></div>
     </div>
 
+    <!-- 右键菜单 -->
     <div class="custom-context-menu" id="contextMenu">
       <div class="menu-item"><i class="fas fa-floppy-disk"></i><span>COPY</span></div>
+      <div class="menu-item"><i class="fas fa-external-link-alt"></i><span>OPEN IN NEW TAB</span></div>
       <div class="menu-item"><i class="fas fa-circle-notch"></i><span>REFRESH</span></div>
       <div class="menu-item"><i class="fas fa-circle-exclamation"></i><span>ABOUT</span></div>
     </div>
