--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="./res/icon/logo.svg" type="image/png">    <!-- 网站图标 -->
     <link rel="stylesheet" href="./body/loading/loading.css" />    <!-- ...loading... -->
     <link rel="stylesheet" href="./body/click/loader.css" />    <!-- 点击效果 -->
+    <link rel="stylesheet" href="./body/pointer/pointer.css" />   <!-- 圆点指针 -->
     <link rel="stylesheet" href="./res/fireworks/fireworks.css" />  <!-- Bing壁纸 -->
 
 
@@ -238,6 +239,7 @@
     <script src="./body/loading/loading.js"></script>  <!-- 页面加载控制脚本 -->
     <script src="./res/wallpaper.js"></script>  <!-- Bing壁纸 -->
     <script src="./body/click/loader.js"></script>  <!-- 点击效果 -->
+    <script src="./body/pointer/pointer.js"></script>   <!-- 圆点指针 -->
 
     <script src="./layout-content/snake/snake.js"></script>  <!-- 贪吃蛇游戏 -->
 
