--- a/nav/index.html
+++ b/nav/index.html
@@ -20,6 +20,7 @@
   <link rel="stylesheet" href="./theme/color.css" />
 
   <link rel="stylesheet" href="./loading/loading.css" />
+  <link rel="stylesheet" href="../body/pointer/pointer.css" />   <!-- 圆点指针 -->
 
 
 </head>
@@ -124,6 +125,7 @@
   <script src="./search/search.js"></script>
   <script src="./theme/theme.js"></script>
   <script src="./loading/loading.js"></script>
+  <script src="../body/pointer/pointer.js"></script>   <!-- 圆点指针 -->
 
 </body>
 
