--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
         </div>
 
         <div class="content2">
-          <div class="tab1">
+          <div class="content2-tab1">
             <button id="startSnakeGame" class="play-button"><i class="fas fa-play"></i></button>
             <canvas id="snakeCanvas" width="144" height="144" style="display:none;"></canvas>
           </div>
-          <div class="tab2">
+          <div class="content2-tab2">
             <div class="github-contributions"><!-- js 生成贡献格子 --></div>
           </div>
         </div>
@@ -205,7 +205,7 @@
     <script src="./body/loading/loading.js"></script> <!-- 页面加载控制脚本 -->
     <script src="./res/wallpaper.js"></script> <!-- Bing壁纸 -->
     <script src="./body/click/loader.js"></script> <!-- 点击效果 -->
-    <script src="./layout-content/snake/snake.js"></script> <!-- 贪吃蛇游戏 -->
+    <script src="./layout-content/snake.js"></script> <!-- 贪吃蛇游戏 -->
     <script src="./layout-top/sentence.js"></script> <!-- 一言 -->
     <script src="./layout-top/weather.js"></script> <!-- 天气 -->
     <script src="./layout-content/github-chart/contributions.js"></script><!-- Github图表 -->
