--- a/nav/index.html
+++ b/nav/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- https://github.com/potatoone -->
     <title>One Potato Navigation</title>
 
     <link rel="icon" href="./logo.svg" type="image/png">
 
     <!-- 引入Font Awesome图标库 -->
-    <link rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" />
     <link rel="stylesheet" href="body.css" />
     <link rel="stylesheet" href="./search/search.css" />  <!-- 搜索框 -->
     <link rel="stylesheet" href="./nav/nav.css" />  <!-- 底部导航 -->
