--- a/index.html
+++ b/index.html
@@ -64,20 +64,20 @@
           <div class="content-tab2">
             <a href="./nav/" class="tab-link" class="tab-link" title="网址导航">
               <i class="fas fa-compass"></i>
-              <span>导航</span>
+              <span>Nav</span>
             </a>
           </div>
           <div class="content-tab3">
-            <a href="https://music.163.com/#/user/home?id=46311222"
-              class="tab-link" title="网易云">
-              <i class="fas fa-music"></i>
-              <span>网易云</span>
+            <a href="https://newsnow.busiyi.world/"
+              class="tab-link" title="News">
+              <i class="fas fa-newspaper"></i>
+              <span>News</span>
             </a>
           </div>
           <div class="content-tab4">
-            <a href="https://huaban.com/#" class="tab-link" title="花瓣">
-              <i class="fas fa-images"></i>
-              <span>花瓣</span>
+            <a href="https://music.cpp-prog.com/" class="tab-link" title="Music">
+              <i class="fas fa-music"></i>
+              <span>Music</span>
             </a>
           </div>
         </div>
